--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: vinay_container
 description: A new Flutter plugin project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/Vinay-Kumar-Bantubilli/vinay_button
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
